# fastapi_sqlalchemy2.0

./: .gitignore  Justfile  config.py  db.py  main.py  models.py  pyproject.toml  views.py
.undodir/: %Users%ahmed%projects%fastapi_sqlalchemy2.0_async%config.py  %Users%ahmed%projects%fastapi_sqlalchemy2.0_async%db.py
migrations/: env.py
migrations/versions/: aa32bf446ed2_adds_user_table.py
